feat: test a github login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.security.oauth2.client.registration.github.client-id=7059b0e021ee851b8d7c
 spring.security.oauth2.client.registration.github.client-secret=cea45fd61cbbe04644ef819ef2dd10463508088d
+
+spring.security.oauth2.client.registration.google.client-id=548284117977-387gh16bb62cn269ocja2o49ljdvq89u.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
